fix spacing between buttons on edit user view

--- a/blog_on_rails/app/assets/stylesheets/main.scss
+++ b/blog_on_rails/app/assets/stylesheets/main.scss
@@ -78,3 +78,6 @@ ul.comment-list {
   justify-content: center;
 }
 
+.btn-spacer {
+  margin-top: 0.4em;
+}
